--- a/app/src/main/res/layout/fragment_question_empty_placeholder.xml
+++ b/app/src/main/res/layout/fragment_question_empty_placeholder.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Click '+' button to add question"
+            android:text="Click '+' button to add questionCreate"
             android:textColor="@android:color/darker_gray"
             android:textStyle="bold"
             android:textSize="20dp" />
