--- a/app/src/main/res/layout/fragment_question_quiz_audio.xml
+++ b/app/src/main/res/layout/fragment_question_quiz_audio.xml
@@ -109,7 +109,7 @@
                     android:inputType="text"
                     android:cursorVisible="true"
                     android:focusable="true"
-                    android:hint="Enter your question"
+                    android:hint="Enter your questionCreate"
                     android:focusableInTouchMode="true"/>
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
