--- a/app/src/main/res/layout/fragment_question_type_text.xml
+++ b/app/src/main/res/layout/fragment_question_type_text.xml
@@ -107,7 +107,7 @@
                 android:inputType="text"
                 android:cursorVisible="true"
                 android:focusable="true"
-                android:hint="Enter question"
+                android:hint="Enter questionCreate"
                 android:focusableInTouchMode="true"/>
         </com.google.android.material.textfield.TextInputLayout>
         <View
