--- a/app/src/main/res/layout/activity_create_collection.xml
+++ b/app/src/main/res/layout/activity_create_collection.xml
@@ -141,7 +141,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Visible to"
+                android:text="Visible"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
                 android:textStyle="bold"/>
